updated frontend and backend, can now run with yarn dev

--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-    "name": "ecommerce-template",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-      "start": "node backend/server",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/taylordragoo/ecommerce-template.git"
-    },
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/taylordragoo/ecommerce-template/issues"
-    },
-    "homepage": "https://github.com/taylordragoo/ecommerce-template#readme",
-    "dependencies": {
-      "express": "^4.17.1"
-    }
+  "name": "ecommerce-template",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "yarn --cwd ./frontend start",
+    "dev": "concurrently \"yarn server\" \"yarn client\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/taylordragoo/ecommerce-template.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/taylordragoo/ecommerce-template/issues"
+  },
+  "homepage": "https://github.com/taylordragoo/ecommerce-template#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.7"
+  }
 }
-  
