--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,18 @@
 .DS_Store
 /frontend/.DS_Store
 /backend/.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Runtime data
 pids
